<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_det1"
        android:hint="@string/details1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_det2"
        android:hint="@string/details2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_det3"
        android:hint="@string/details3"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_det4"
        android:hint="@string/details4"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_det5"
        android:hint="@string/details5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="100dp"
            android:layout_marginEnd="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/prev_button3"
            android:text="@string/prev"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/finish_button"
            android:text="@string/finish"/>
    </LinearLayout>
    </LinearLayout>


