<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_addr1"
        android:hint="@string/addr1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/u_addr2"
        android:hint="@string/addr2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="4">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/u_city"
            android:hint="@string/city"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/u_state"
            android:hint="@string/state"/>
        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_weight="1"
        android:id="@+id/u_zip"
        android:hint="@string/zip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
        <Button
        android:layout_width="100dp"
            android:layout_marginEnd="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/prev_button2"
        android:text="@string/prev" />
        <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/next_button2"
        android:text="@string/next"/>
    </LinearLayout>

</LinearLayout>



