<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@+id/name_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_last"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/city_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_zip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/name_lastname"
        android:paddingTop="50dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/lang1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/city_zip"
        android:paddingTop="100dp"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>